Details
-
Bug
-
Resolution: Fixed
-
Critical
-
7.1.0
-
7.1.0-1745
-
Triaged
-
-
1
-
No
-
KV 2021-Nov, KV 2021-Dec
Description
- Step 1: Create a 10 node cluster
- Step 2: Create required buckets and collections.
- Step 3: Create 1000000 items sequentially
- Step 4: Update 1000000 RandonKey keys to create 50 percent fragmentation
- Step 5: Create 1000000 items sequentially
- Step 6: Update 1000000 RandonKey keys to create 50 percent fragmentation
- Step 7: Add 5 index/n1ql nodes and create 20 indexes on 20 different collections. Let them build asynchoronously.
- Step 8: Start another CRUD load asynchoronously.
- Step 9: Rebalance in with Loading of docs.
Rebalance exited with reason {mover_crashed,
|
{unexpected_exit,
|
{'EXIT',<0.14702.117>,
|
{{dcp_wait_for_data_move_failed,
|
"GleamBookUsers0",378,'ns_1@172.23.121.123',
|
['ns_1@172.23.121.127',
|
'ns_1@172.23.121.136'],
|
{error,no_stats_for_this_vbucket}},
|
[{ns_single_vbucket_mover,
|
'-wait_dcp_data_move/5-fun-0-',5,
|
[{file,"src/ns_single_vbucket_mover.erl"},
|
{line,483}]},
|
{proc_lib,init_p,3,
|
[{file,"proc_lib.erl"},{line,211}]}]}}}}.
|
Rebalance Operation Id = 8ebe25aa8db470fbc48b47fc2bf9e0b3
|
QE Test |
guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/magma_temp_job4.ini -p bucket_storage=magma,bucket_eviction_policy=fullEviction,rerun=False,iterations=2,sdk_timeout=60,log_level=debug,infra_log_level=debug,skip_cleanup=True -t aGoodDoctor.Hospital.Murphy.SystemTestMagma,nodes_init=10,graceful=True,skip_cleanup=True,num_items=1000000,num_buckets=1,bucket_names=GleamBook,doc_size=1024,key_size=18,assert_crashes_on_load=True,num_collections=20,maxttl=10,num_indexes=5,pc=10,index_nodes=5,query_nodes=0,cbas_nodes=0,fts_nodes=0,ops_rate=50000,doc_ops=create:update:delete:read,durability=Majority,crashes=10 -m rest'
|
Now re-running the test with just 5 indexes to see if that behaves differently.
Attachments
Issue Links
- relates to
-
MB-43796 OSO Enabled Initial Index build time greater than OSO Disabled
-
- Closed
-
-
MB-49786 Default number of AuxIO threads too low for HiDD workloads
-
- Closed
-
-
MB-49685 Seqno-ordered collection filtered backfills monopolise task/thread
-
- Open
-
-
MB-49006 Prioritise backfills for replication DCP streams
-
- Open
-