MB-49702: Include BackfillTask's client name in description

This gives each BackfillManagerTask its own name instead of the
generic 'Backfilling items for a DCP Connection', which aids in
diagnosing issues with a particular DCP connection.

Change-Id: Ic7f354bed80f30296da08c54ebb5a12212ded41f
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/166745
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>