engines/ep/tests/mock/mock_dcp_backfill_mgr.h
@@ -24,6 +24,7 @@ public:
     explicit MockDcpBackfillManager(EventuallyPersistentEngine& theEngine)
         : BackfillManager(*theEngine.getKVBucket(),
                           theEngine.getDcpConnMap(),
+                          "MockDcpBackfillManager",
                           theEngine.getConfiguration()) {
     }
 
